Let puzzle shrink on small screens. Fix css rules that did not use class

--- a/sliding.css
+++ b/sliding.css
@@ -8,31 +8,26 @@
 }
 
 #puzzle-container {
-  width: 90vh;
-  height: 90vh;
+  width: min(90vh, 90vw);
+  height: min(90vh, 90vw);
   margin: auto;
   display: grid;
   background-color: white;
   color: white;
 }
 
+#stats {
+  width: 100vw;
+  height: 100%;
+  max-height: 10vh;
+}
+
 .puzzle-square {
   margin: 10px 10px 10px 10px;
   padding: 1px 1px 1px 1px;
   background-color: black;
-}
-
-.puzzle-square.empty-square {
-  background-color: inherit;
-  color: inherit;
-  visibility: visible;
-}
-
-button {
   display: inline-block;
   border: none;
-  padding: 1rem 2rem;
-  margin: 0;
   text-decoration: none;
   color: #fff;
   font-family: sans-serif;
@@ -43,8 +38,14 @@ button {
   -moz-appearance: none;
 }
 
-button:focus,
-button:active {
+.puzzle-square.empty-square {
+  background-color: inherit;
+  color: inherit;
+  visibility: visible;
+}
+
+.puzzle-square:focus,
+.puzzle-square:active {
   outline: 7px dashed black;
 }
 
